--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family="CG":ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 * {
     padding: 0;
@@ -33,7 +33,7 @@ body {
 
 .loadingclose {
     padding: 1% 6%;
-    font-family: Poppins;
+    font-family: "CG";
     background-color: rgb(241, 99, 99);
     margin-top: 10vh;
     border-radius: 5px;
@@ -59,7 +59,7 @@ body {
 }
 
 .sideButton {
-    font-family: Poppins;
+    font-family: "CG";
     background-color: rgb(129, 255, 129);
     border: none;
     padding: 3%;
@@ -84,7 +84,7 @@ body {
     align-items: center;
     flex-direction: column;
     gap: 20px;
-    font-family: Poppins;
+    font-family: "CG";
 }
 
 .loading-screen .container img {
@@ -150,7 +150,7 @@ body {
 }
 
 .container h2 {
-    font-family: Poppins;
+    font-family: "CG";
     margin-bottom: 3vh;
     text-align: center;
 }
@@ -186,7 +186,7 @@ body {
 
 .sidedata h4 {
     text-align: center;
-    font-family: "Poppins";
+    font-family: "CG";
     font-size: 13px;
     color: rgba(0, 0, 0, 0.449);
     font-style: italic;
@@ -194,7 +194,7 @@ body {
 }
 
 .sidedata p {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "CG";
     margin-bottom: 1vh;
 }
 
@@ -240,11 +240,11 @@ body {
 }
 
 .tuboproj h2 {
-    font-family: Poppins;
+    font-family: "CG";
 }
 
 .tuboproj p {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "CG";
     opacity: 0.682;
 }
 
@@ -256,7 +256,7 @@ hr {
 }
 
 .title {
-    font-family: Poppins;
+    font-family: "CGB";
     text-align: center;
 }
 
@@ -282,7 +282,7 @@ hr {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    font-family: Poppins;
+    font-family: "CG";
     cursor: pointer;
 }
 
@@ -298,7 +298,9 @@ hr {
 
 .status-icon h2 {
     font-size: 16px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "CGB";
+    font-weight: 600;
+    text-align: center;
     color: white;
     -webkit-text-stroke-width: 0.5px;
     -webkit-text-stroke-color: black;
